@@ -90,6 +90,8 @@
     1   energy  Report energy counts in amp-hours
 
 ----------------------------------- Completed -----------------------------------------
+    2    probe  Implemented CallTrace and CallStack utilities for probes     1.7.57
+    2    probe  [John Regehr] added Break, Icall, Print, etc monitors        1.7.56
     1    input  ELF format loads symbols for use in monitors                 1.7.56
     1    probe  Implement stack change probe that uses probes, watches       1.7.38
   2-3    input  ELF format reader                                            1.7.xx
